Fix MIDI device connection handling: - Rename connect to connectToDevice for consistency - Fix PendingIntent flags for Android U+ - Improve error handling and logging

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <!-- USB MIDI device feature -->
     <uses-feature android:name="android.hardware.usb.host" android:required="true" />
+    <uses-feature android:name="android.software.midi" android:required="true" />
 
     <application
         android:allowBackup="true"
