--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.midichords">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- USB MIDI device feature -->
     <uses-feature android:name="android.hardware.usb.host" android:required="true" />
